--- a/app/assets/stylesheets/hover.scss
+++ b/app/assets/stylesheets/hover.scss
@@ -211,8 +211,69 @@
   transform: translateY(0px);
 }
 
+  /* Mobile Media Settings */
+@media only screen and (max-width: 766px) {
+    .hvr-float-section {
+    display: none;
+    // vertical-align: middle;
+    // -webkit-transform: perspective(1px) translateZ(0);
+    // transform: perspective(1px) translateZ(0);
+    // -webkit-transform: translateY(67px);
+    // transform: translateY(67px);
+    // box-shadow: 0 0 1px transparent;
+    // -webkit-transition-duration: 0.3s;
+    // transition-duration: 0.3s;
+    // -webkit-transition-property: transform;
+    // transition-property: transform;
+    // -webkit-transition-timing-function: ease-out;
+    // transition-timing-function: ease-out;
+  }
+  .hvr-float-section:hover, .hvr-float-section:focus, .hvr-float:active {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+  /* Underline Reveal Section */
+  .hvr-underline-reveal-section {
+    display: none;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    position: relative;
+    // overflow: hidden;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  .hvr-underline-reveal-section:before {
+    display: none;
+    // content: "";
+    // position: absolute;
+    // z-index: -1;
+    // left: 0;
+    // right: 0;
+    // bottom: 0;
+    // // background: #2098D1;
+    background: transparent;
+    // height: 80px;
+    // -webkit-transform: translateY(73px);
+    // transform: translateY(73px);
+    // -webkit-transition-property: transform;
+    // transition-property: transform;
+    // -webkit-transition-duration: 0.3s;
+    // transition-duration: 0.3s;
+    // -webkit-transition-timing-function: ease-out;
+    // transition-timing-function: ease-out;
+  }
+  .hvr-underline-reveal-section:hover:before, .hvr-underline-reveal-section:focus:before, .hvr-underline-reveal-section:active:before {
+    // -webkit-transform: translateY(73px);
+    // transform: translateY(73px);
+  }
+}
+  /* End Mobile Media Settings */
+
+
 /* Underline Reveal */
-.hvr-underline-reveal {
+.no-touch .hvr-underline-reveal {
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -223,7 +284,7 @@
   -webkit-transform: translateY(0);
   transform: translateY(0);
 }
-.hvr-underline-reveal:before {
+.no-touch .hvr-underline-reveal:before {
   content: "";
   position: absolute;
   z-index: -1;
@@ -242,10 +303,11 @@
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
-.hvr-underline-reveal:hover:before, .hvr-underline-reveal:focus:before, .hvr-underline-reveal:active:before {
+.no-touch .hvr-underline-reveal:hover:before, .no-touch .hvr-underline-reveal:focus:before, .no-touch .hvr-underline-reveal:active:before {
   -webkit-transform: translateY(24px);
   transform: translateY(24px);
 }
+
 
 /* Float */
 .hvr-float {
